patterns/ProductList/productList.styl
$breakpoint-small = 400px
$breakpoint-medium = 650px
$breakpoint-large = 900px
$breakpoint-huge = 1000px

.product-list
  display grid
  grid-template-columns 1fr
  grid-gap 2.4rem 0
  padding 0 1.5rem
  margin-top 2.4rem

  @media (min-width $breakpoint-small)
    // see https://stackoverflow.com/a/52861514
    grid-template-columns repeat(2, minmax(0,1fr))
    grid-gap 2.4rem 1rem

  @media (min-width $breakpoint-medium)
    grid-template-columns repeat(3, minmax(0,1fr))
    grid-gap 2.4rem 2rem

  @media (min-width $breakpoint-large)
    grid-template-columns repeat(4, minmax(0,1fr))

  @media (min-width $breakpoint-large)
    max-width 100rem
    margin-left auto

.product-item
  border-top 1px solid var(--heather)
  padding-top 2.3rem // 2.4rem - 1px border

.product-item__image
  display flex
  justify-content center

  img
    max-width 100%
    max-height 22.8rem

.product-item__variants
  display flex
  justify-content center
  padding 0.6rem 0 1.2rem

.product-item__variant
  height 2.4rem
  width 2.4rem
  border 2px solid var(--white)
  border-radius 50%
  box-shadow 0 0 0 1px var(--fountain-blue)
  margin 0 0.3rem

.product-item__title
  text-align center

.product-item__manufacturer
  display block
  font-size 1.3rem
  font-weight var(--font-weight-semi-bold)
  letter-spacing 0.3rem
  line-height 1.2rem
  color var(--chateau)
  text-transform uppercase
  text-align center
  padding 0.2rem 0 0.4rem
  margin 0.6rem 0

.product-item__shortdesc
  display -webkit-box
  -webkit-line-clamp 3
  -webkit-box-orient vertical
  overflow hidden
  text-align center
  // Be careful not to override padding-top/bottom from <Copytext>
  padding-left 1.5rem
  padding-right 1.5rem

.product-item__prices
  text-align center
  padding 0.1rem 0 0.5rem
  margin-top 0.6rem

.product-item__price
  font-size 1.7rem
  font-weight var(--font-weight-semi-bold)
  line-height 2.4rem
  letter-spacing 0.025rem

  &--reduced
    text-decoration line-through
    margin-right 1.2rem

  &--current
    color var(--thunderbird)

.product-item__price-hint
  color var(--chateau)
  line-height 1.8rem
  text-align center
  padding 0.5rem 0 0.1rem

  span + span
    margin-left 1rem
    position relative

    &:before
      display block
      content: "\00b7"
      position absolute
      top 0
      left -0.7rem

.product-item__actions
  margin-top 1.2rem
  text-align center

